--- a/Pandas_101_2025.ipynb
+++ b/Pandas_101_2025.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +31,7 @@
       "metadata": {
         "id": "irWbqOM7nDCb"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -329,7 +330,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -646,7 +647,7 @@
       "metadata": {
         "id": "t-tvaeekrlEb"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -662,7 +663,7 @@
         },
         "outputId": "a61aafd8-83b4-492f-f9ad-9ed624fb31c4"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1196,7 +1197,7 @@
       "metadata": {
         "id": "Z9TKACC3Vug8"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1212,7 +1213,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1231,7 +1232,7 @@
       "metadata": {
         "id": "HTLAUjeCrvHc"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1326,7 +1327,7 @@
           "height": 1000
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1968,7 +1969,7 @@
       "source": [
         "stopandsearch_df.head()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2815,7 +2816,7 @@
       "source": [
         "stopandsearch_df.shape"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2860,7 +2861,7 @@
         "id": "uqsTu9fQV0zc",
         "outputId": "1cbc5f49-ac41-408f-ed14-116991d52c9e"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2970,7 +2971,7 @@
         "id": "SN1L3Hm8WWV0",
         "outputId": "8ace868d-3622-4882-e341-a7e9f5d61b5a"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3006,7 +3007,7 @@
       "metadata": {
         "id": "alpSao9gWmHs"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3021,7 +3022,7 @@
         "id": "q3VrwrbRXdcC",
         "outputId": "c0d6aecc-15cf-4220-ec15-9b3fa729dbdf"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3047,7 +3048,7 @@
         "id": "PAfmJsGXX-8B",
         "outputId": "a2d083ee-d74b-4a35-be3b-58e87fb2e1ed"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3074,7 +3075,7 @@
         "id": "L4AnXl3JX-1M",
         "outputId": "46c5959a-811d-47d1-b30b-d3797dc396f6"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3336,7 +3337,7 @@
         "id": "ryRTfKE4dZ1i",
         "outputId": "64dff8a7-9b30-450b-977f-4267b105ac16"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3371,7 +3372,7 @@
         "                                  'Self-defined ethnicity']][:5]\n",
         "smaller_table"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3773,7 +3774,7 @@
       "source": [
         "stopandsearch_df.iloc[1:5,:-10]"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4107,7 +4108,7 @@
         "id": "y2xY9dHofRSj",
         "outputId": "4f64c6b3-7233-4fa8-a15f-c9477feb9846"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4217,7 +4218,7 @@
         "id": "NfSsM6HEfzEA",
         "outputId": "3796a44d-8a1f-4171-f9df-015f1a27b513"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4327,7 +4328,7 @@
         "id": "vvR6AbIHgOW7",
         "outputId": "faf46664-48f7-429a-8b04-f04140b5487c"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4922,7 +4923,7 @@
         "id": "w7XVu-cYhDx7",
         "outputId": "c463a3b4-a74e-4e8f-d619-17f34ce53958"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5303,7 +5304,7 @@
         "id": "KMNPa8_ShU7D",
         "outputId": "cfa1c2ab-6d66-48c1-a798-7b20f750f00d"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5598,7 +5599,7 @@
         "id": "gm7r76wQhzb6",
         "outputId": "3536c9e0-7365-49f7-da0b-12f3959e77e1"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -6886,7 +6887,7 @@
       "metadata": {
         "id": "dJ9sqkvViV0Q"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6897,7 +6898,7 @@
       "metadata": {
         "id": "9eERH9lAivUO"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6913,7 +6914,7 @@
           "height": 1000
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7952,7 +7953,7 @@
       "metadata": {
         "id": "QG17_Ev1qYUG"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7968,7 +7969,7 @@
         "id": "LVtHGG9grMWh",
         "outputId": "6bf28e53-ade1-4731-9bba-74d1f0110505"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8609,7 +8610,7 @@
         "id": "-_3c2eJOq7wE",
         "outputId": "f1d190b1-6d50-40cf-9258-9d400cc85b7d"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8635,7 +8636,7 @@
         "id": "koWFEqjfriwc",
         "outputId": "19566610-345e-4b68-c598-43c2eca8b18f"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8652,6 +8653,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "###Hw4\n",
+        "\n",
         "เหมือน Quiz 8 แต่เป็นAsia แล้ว presentอาทิตย์หน้า"
       ],
       "metadata": {
@@ -8660,7 +8663,71 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "import glob\n",
+        "import os\n",
+        "\n",
+        "# 1. ทำการเชื่อมต่อกับ Google Drive (เหมือนเดิม)\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# 2. กำหนด Path หลักและรูปแบบของไฟล์ที่ต้องการค้นหา\n",
+        "# เราจะใช้เครื่องหมาย * (Wildcard) แทนส่วนของชื่อไฟล์หรือโฟลเดอร์ที่เปลี่ยนแปลงไป\n",
+        "# รูปแบบ: ค้นหาไฟล์ .csv ที่อยู่ในโฟลเดอร์ 2025-XX ใดๆ ก็ตาม\n",
+        "path_pattern = '/content/drive/MyDrive/Data/2025-*/*-stop-and-search.csv'\n",
+        "all_stopandsearch = glob.glob(path_pattern)\n",
+        "\n",
+        "print(f\"ค้นพบไฟล์ CSV ทั้งหมด: {len(all_stopandsearch)} ไฟล์\")\n",
+        "# ลองแสดงตัวอย่าง 5 ไฟล์แรกที่เจอ\n",
+        "print(\"ตัวอย่างไฟล์ที่พบ:\")\n",
+        "for f in all_stopandsearch[:5]:\n",
+        "    print(f)\n",
+        "print(\"-\" * 50)\n",
+        "\n",
+        "# 4. สร้าง Loop เพื่ออ่านไฟล์ทั้งหมดและรวมเป็น DataFrame เดียว\n",
+        "all_dfs = [] # สร้าง list ว่างเพื่อเก็บ DataFrame ชั่วคราว\n",
+        "\n",
+        "for filepath in all_stopandsearch:\n",
+        "    # อ่านไฟล์ CSV จาก path ที่ได้มา\n",
+        "    df = pd.read_csv(filepath)\n",
+        "\n",
+        "    # --- ส่วนสำคัญ: ดึงชื่อเขตตำรวจจากชื่อไฟล์ ---\n",
+        "    # ชื่อไฟล์: '.../2025-01-avon-and-somerset-stop-and-search.csv'\n",
+        "    # 1. ดึงเฉพาะชื่อไฟล์ออกมา: os.path.basename(filepath) -> '2025-01-avon-and-somerset-stop-and-search.csv'\n",
+        "    filename = os.path.basename(filepath)\n",
+        "    # 2. แยกส่วนประกอบของชื่อไฟล์ด้วยเครื่องหมาย '-'\n",
+        "    parts = filename.split('-')\n",
+        "    # 3. ชื่อเขตตำรวจจะอยู่ระหว่างส่วนของวันที่ (2 ส่วนแรก) และ 3 ส่วนท้าย ('stop', 'and', 'search.csv')\n",
+        "    force_name_parts = parts[2:-3]\n",
+        "    # 4. นำชิ้นส่วนชื่อมารวมกันและจัดรูปแบบตัวพิมพ์ให้สวยงาม (เช่น 'avon and somerset' -> 'Avon And Somerset')\n",
+        "    force_name = ' '.join(force_name_parts).title()\n",
+        "\n",
+        "    # เพิ่มคอลัมน์ 'Police Force' เข้าไปใน DataFrame\n",
+        "    df['Police Force'] = force_name\n",
+        "\n",
+        "    all_dfs.append(df)\n",
+        "\n",
+        "# รวม DataFrame ทั้งหมดใน list ให้เป็น DataFrame เดียว\n",
+        "combined_df = pd.concat(all_dfs, ignore_index=True)\n",
+        "\n",
+        "print(\"รวมข้อมูลจากทุกไฟล์สำเร็จแล้ว!\")\n",
+        "print(f\"DataFrame ใหม่มีข้อมูลทั้งหมด: {len(combined_df):,} แถว\")\n",
+        "print(f\"จากเขตตำรวจทั้งหมด: {combined_df['Police Force'].nunique()} เขต\")\n",
+        "print(\"-\" * 50)\n",
+        "\n",
+        "# --- จากตรงนี้ สามารถนำโค้ดวิเคราะห์จากคำตอบที่แล้วมาใช้ต่อได้เลย ---\n",
+        "\n",
+        "# คัดกรองข้อมูลเฉพาะผู้ถูกเรียกค้นที่เป็นคน Asia\n",
+        "asian_stops_df = combined_df[combined_df['Self-defined ethnicity'].str.contains('Asian', na=False)]\n",
+        "\n",
+        "# จัดกลุ่มและนับจำนวนตามเขตตำรวจ\n",
+        "asian_counts = asian_stops_df['Police Force'].value_counts()\n",
+        "\n",
+        "print(\"สรุปผลการเรียกค้นบุคคลเชื้อสายเอเชียในรอบ 5 เดือน (จากข้อมูลที่โหลดแบบอัตโนมัติ):\\n\")\n",
+        "print(f\"📈 เขตที่มีการเรียกค้นมากที่สุด: {asian_counts.idxmax()} ({asian_counts.max():,} ครั้ง)\")\n",
+        "print(f\"📉 เขตที่มีการเรียกค้นน้อยที่สุด: {asian_counts.idxmin()} ({asian_counts.min():,} ครั้ง)\")"
+      ],
       "metadata": {
         "id": "jDfUgQGxrmhJ"
       },
@@ -8675,7 +8742,7 @@
       "metadata": {
         "id": "PXs5sZV0n44r"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8691,7 +8758,7 @@
         "id": "V8EjC_akojSq",
         "outputId": "737a2121-dfaa-426d-8b8e-bedb42191143"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9333,7 +9400,7 @@
         "id": "g63Q1DRem539",
         "outputId": "d70a157f-95cc-4266-a7e7-c479224381a1"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9690,7 +9757,7 @@
         "id": "JyScpVrimsSj",
         "outputId": "76d630e2-c35c-4ffa-e5dc-13eaee5a3535"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
