--- a/Pandas_101_2025.ipynb
+++ b/Pandas_101_2025.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8653,7 +8652,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Hw4\n",
+        "##Hw4\n",
         "\n",
         "เหมือน Quiz 8 แต่เป็นAsia แล้ว presentอาทิตย์หน้า"
       ],
@@ -8733,6 +8732,305 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import glob\n",
+        "import os\n",
+        "\n",
+        "# 1. ทำการเชื่อมต่อกับ Google Drive (เหมือนเดิม)\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# 2. กำหนด Path หลักและรูปแบบของไฟล์ที่ต้องการค้นหา\n",
+        "# เราจะใช้เครื่องหมาย * (Wildcard) แทนส่วนของชื่อไฟล์หรือโฟลเดอร์ที่เปลี่ยนแปลงไป\n",
+        "# รูปแบบ: ค้นหาไฟล์ .csv ที่อยู่ในโฟลเดอร์ 2025-XX ใดๆ ก็ตาม\n",
+        "path_pattern = '/content/drive/MyDrive/Data/2025-*/*-stop-and-search.csv'\n",
+        "all_stopandsearch = glob.glob(path_pattern)\n",
+        "\n",
+        "print(f\"ค้นพบไฟล์ CSV ทั้งหมด: {len(all_stopandsearch)} ไฟล์\")\n",
+        "# ลองแสดงตัวอย่าง 5 ไฟล์แรกที่เจอ\n",
+        "print(\"ตัวอย่างไฟล์ที่พบ:\")\n",
+        "for f in all_stopandsearch[:5]:\n",
+        "    print(f)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QUmGHCrx8n31",
+        "outputId": "526b9c09-ec35-41b2-a25e-1c1cd0078fca"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "ค้นพบไฟล์ CSV ทั้งหมด: 186 ไฟล์\n",
+            "ตัวอย่างไฟล์ที่พบ:\n",
+            "/content/drive/MyDrive/Data/2025-04/2025-04-avon-and-somerset-stop-and-search.csv\n",
+            "/content/drive/MyDrive/Data/2025-04/2025-04-bedfordshire-stop-and-search.csv\n",
+            "/content/drive/MyDrive/Data/2025-04/2025-04-btp-stop-and-search.csv\n",
+            "/content/drive/MyDrive/Data/2025-04/2025-04-cambridgeshire-stop-and-search.csv\n",
+            "/content/drive/MyDrive/Data/2025-04/2025-04-cheshire-stop-and-search.csv\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 4. สร้าง Loop เพื่ออ่านไฟล์ทั้งหมดและรวมเป็น DataFrame เดียว\n",
+        "all_dfs = [] # สร้าง list ว่างเพื่อเก็บ DataFrame ชั่วคราว\n",
+        "\n",
+        "for filepath in all_stopandsearch:\n",
+        "    # อ่านไฟล์ CSV จาก path ที่ได้มา\n",
+        "    df = pd.read_csv(filepath)\n",
+        "\n",
+        "    # --- ส่วนสำคัญ: ดึงชื่อเขตตำรวจจากชื่อไฟล์ ---\n",
+        "    # ชื่อไฟล์: '.../2025-01-avon-and-somerset-stop-and-search.csv'\n",
+        "    # 1. ดึงเฉพาะชื่อไฟล์ออกมา: os.path.basename(filepath) -> '2025-01-avon-and-somerset-stop-and-search.csv'\n",
+        "    filename = os.path.basename(filepath)\n",
+        "    # 2. แยกส่วนประกอบของชื่อไฟล์ด้วยเครื่องหมาย '-'\n",
+        "    parts = filename.split('-')\n",
+        "    # 3. ชื่อเขตตำรวจจะอยู่ระหว่างส่วนของวันที่ (2 ส่วนแรก) และ 3 ส่วนท้าย ('stop', 'and', 'search.csv')\n",
+        "    force_name_parts = parts[2:-3]\n",
+        "    # 4. นำชิ้นส่วนชื่อมารวมกันและจัดรูปแบบตัวพิมพ์ให้สวยงาม (เช่น 'avon and somerset' -> 'Avon And Somerset')\n",
+        "    force_name = ' '.join(force_name_parts).title()\n",
+        "\n",
+        "    # เพิ่มคอลัมน์ 'Police Force' เข้าไปใน DataFrame\n",
+        "    df['Police Force'] = force_name\n",
+        "\n",
+        "    all_dfs.append(df)\n",
+        "\n",
+        "# รวม DataFrame ทั้งหมดใน list ให้เป็น DataFrame เดียว\n",
+        "combined_df = pd.concat(all_dfs, ignore_index=True)\n",
+        "\n",
+        "print(\"รวมข้อมูลจากทุกไฟล์สำเร็จแล้ว!\")\n",
+        "print(f\"DataFrame ใหม่มีข้อมูลทั้งหมด: {len(combined_df):,} แถว\")\n",
+        "print(f\"จากเขตตำรวจทั้งหมด: {combined_df['Police Force'].nunique()} เขต\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "riIUBejS86Hy",
+        "outputId": "44e12231-df1b-417c-c47d-923019734e53"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "รวมข้อมูลจากทุกไฟล์สำเร็จแล้ว!\n",
+            "DataFrame ใหม่มีข้อมูลทั้งหมด: 155,291 แถว\n",
+            "จากเขตตำรวจทั้งหมด: 38 เขต\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- จากตรงนี้ สามารถนำโค้ดวิเคราะห์จากคำตอบที่แล้วมาใช้ต่อได้เลย ---\n",
+        "\n",
+        "# คัดกรองข้อมูลเฉพาะผู้ถูกเรียกค้นที่เป็นคน Asia\n",
+        "asian_stops_df = combined_df[combined_df['Self-defined ethnicity'].str.contains('Asian', na=False)]\n",
+        "\n",
+        "# จัดกลุ่มและนับจำนวนตามเขตตำรวจ\n",
+        "asian_counts = asian_stops_df['Police Force'].value_counts()\n",
+        "\n",
+        "print(\"สรุปผลการเรียกค้นบุคคลเชื้อสายเอเชียในรอบ 5 เดือน (จากข้อมูลที่โหลดแบบอัตโนมัติ):\\n\")\n",
+        "print(f\"📈 เขตที่มีการเรียกค้นมากที่สุด: {asian_counts.idxmax()} ({asian_counts.max():,} ครั้ง)\")\n",
+        "print(f\"📉 เขตที่มีการเรียกค้นน้อยที่สุด: {asian_counts.idxmin()} ({asian_counts.min():,} ครั้ง)\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4suihACG9Lpu",
+        "outputId": "0849a5ed-abd2-4b56-9e37-3e5e6c63dc71"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "สรุปผลการเรียกค้นบุคคลเชื้อสายเอเชียในรอบ 5 เดือน (จากข้อมูลที่โหลดแบบอัตโนมัติ):\n",
+            "\n",
+            "📈 เขตที่มีการเรียกค้นมากที่สุด: West Midlands (2,104 ครั้ง)\n",
+            "📉 เขตที่มีการเรียกค้นน้อยที่สุด: Durham (5 ครั้ง)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Hw5 จาก code เดิม จากเมืองไหนที่คนเอเชียถูกเรียกมากที่สุด-น้อยที่สุด เป็นเดือนไหนที่คนเอเชียถูกเรียกมากที่สุด-น้อยที่สุด"
+      ],
+      "metadata": {
+        "id": "iYdf-9DSU50Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import glob\n",
+        "import os\n",
+        "\n",
+        "# 1. ทำการเชื่อมต่อกับ Google Drive (เหมือนเดิม)\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# 2. กำหนด Path หลักและรูปแบบของไฟล์ที่ต้องการค้นหา\n",
+        "# เราจะใช้เครื่องหมาย * (Wildcard) แทนส่วนของชื่อไฟล์หรือโฟลเดอร์ที่เปลี่ยนแปลงไป\n",
+        "# รูปแบบ: ค้นหาไฟล์ .csv ที่อยู่ในโฟลเดอร์ 2025-XX ใดๆ ก็ตาม\n",
+        "path_pattern = '/content/drive/MyDrive/Data/2025-*/*-stop-and-search.csv'\n",
+        "all_stopandsearch = glob.glob(path_pattern)\n",
+        "\n",
+        "print(f\"ค้นพบไฟล์ CSV ทั้งหมด: {len(all_stopandsearch)} ไฟล์\")\n",
+        "# ลองแสดงตัวอย่าง 5 ไฟล์แรกที่เจอ\n",
+        "print(\"ตัวอย่างไฟล์ที่พบ:\")\n",
+        "for f in all_stopandsearch[:5]:\n",
+        "    print(f)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_x_tCkFw2wFf",
+        "outputId": "7691718b-9ec0-4881-9519-f9a29157c153"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "ค้นพบไฟล์ CSV ทั้งหมด: 186 ไฟล์\n",
+            "ตัวอย่างไฟล์ที่พบ:\n",
+            "/content/drive/MyDrive/Data/2025-04/2025-04-avon-and-somerset-stop-and-search.csv\n",
+            "/content/drive/MyDrive/Data/2025-04/2025-04-bedfordshire-stop-and-search.csv\n",
+            "/content/drive/MyDrive/Data/2025-04/2025-04-btp-stop-and-search.csv\n",
+            "/content/drive/MyDrive/Data/2025-04/2025-04-cambridgeshire-stop-and-search.csv\n",
+            "/content/drive/MyDrive/Data/2025-04/2025-04-cheshire-stop-and-search.csv\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 4. สร้าง Loop เพื่ออ่านไฟล์ทั้งหมดและรวมเป็น DataFrame เดียว\n",
+        "all_dfs = [] # สร้าง list ว่างเพื่อเก็บ DataFrame ชั่วคราว\n",
+        "\n",
+        "for filepath in all_stopandsearch:\n",
+        "    # อ่านไฟล์ CSV จาก path ที่ได้มา\n",
+        "    df = pd.read_csv(filepath)\n",
+        "\n",
+        "    # --- ส่วนสำคัญ: ดึงชื่อเขตตำรวจจากชื่อไฟล์ ---\n",
+        "    # ชื่อไฟล์: '.../2025-01-avon-and-somerset-stop-and-search.csv'\n",
+        "    # 1. ดึงเฉพาะชื่อไฟล์ออกมา: os.path.basename(filepath) -> '2025-01-avon-and-somerset-stop-and-search.csv'\n",
+        "    filename = os.path.basename(filepath)\n",
+        "    # 2. แยกส่วนประกอบของชื่อไฟล์ด้วยเครื่องหมาย '-'\n",
+        "    parts = filename.split('-')\n",
+        "    # 3. ชื่อเขตตำรวจจะอยู่ระหว่างส่วนของวันที่ (2 ส่วนแรก) และ 3 ส่วนท้าย ('stop', 'and', 'search.csv')\n",
+        "    force_name_parts = parts[2:-3]\n",
+        "    # 4. นำชิ้นส่วนชื่อมารวมกันและจัดรูปแบบตัวพิมพ์ให้สวยงาม (เช่น 'avon and somerset' -> 'Avon And Somerset')\n",
+        "    force_name = ' '.join(force_name_parts).title()\n",
+        "\n",
+        "    # เพิ่มคอลัมน์ 'Police Force' เข้าไปใน DataFrame\n",
+        "    df['Police Force'] = force_name\n",
+        "\n",
+        "    all_dfs.append(df)\n",
+        "\n",
+        "# รวม DataFrame ทั้งหมดใน list ให้เป็น DataFrame เดียว\n",
+        "combined_df = pd.concat(all_dfs, ignore_index=True)\n",
+        "\n",
+        "print(\"รวมข้อมูลจากทุกไฟล์สำเร็จแล้ว!\")\n",
+        "print(f\"DataFrame ใหม่มีข้อมูลทั้งหมด: {len(combined_df):,} แถว\")\n",
+        "print(f\"จากเขตตำรวจทั้งหมด: {combined_df['Police Force'].nunique()} เขต\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oMNsMllk3lg3",
+        "outputId": "d36f1f99-b025-4ae3-f7b5-f2743576deb5"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "รวมข้อมูลจากทุกไฟล์สำเร็จแล้ว!\n",
+            "DataFrame ใหม่มีข้อมูลทั้งหมด: 155,291 แถว\n",
+            "จากเขตตำรวจทั้งหมด: 38 เขต\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# กรองเฉพาะเชื้อชาติ Asian และนับจำนวนในแต่ละเดือน (โดยไม่เพิ่มคอลัมน์ใหม่)\n",
+        "monthly_counts = (\n",
+        "    combined_df[combined_df['Self-defined ethnicity'].str.contains('Asian', na=False)]\n",
+        "    .groupby(combined_df['Date'].dt.strftime('%Y-%m'))\n",
+        "    .size()\n",
+        ")\n",
+        "\n",
+        "# หาค่า max/min\n",
+        "most_month = monthly_counts.idxmax()\n",
+        "most_count = monthly_counts.max()\n",
+        "\n",
+        "least_month = monthly_counts.idxmin()\n",
+        "least_count = monthly_counts.min()\n",
+        "\n",
+        "# แสดงผล\n",
+        "print(f\"\\nเดือนที่มีการตรวจค้นคนเชื้อชาติ Asian มาก/น้อยที่สุด:\")\n",
+        "print(f\"📈 มากที่สุด: {most_month} ({most_count:,} ครั้ง)\")\n",
+        "print(f\"📉 น้อยที่สุด: {least_month} ({least_count:,} ครั้ง)\")\n"
+      ],
+      "metadata": {
+        "id": "j4VD2Z4ADTmH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "79e1e15a-9d97-40aa-86a7-8cfa7c8afc2f"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "เดือนที่มีการตรวจค้นคนเชื้อชาติ Asian มาก/น้อยที่สุด:\n",
+            "📈 มากที่สุด: 2025-01 (2,874 ครั้ง)\n",
+            "📉 น้อยที่สุด: 2025-05 (1,733 ครั้ง)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## stopandsearchEX."
+      ],
+      "metadata": {
+        "id": "veCci7mk4Fjv"
+      }
     },
     {
       "cell_type": "code",
